<resources>
    <string name="app_name">3_secondPhaseOfApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_weather">Weather</string>
    <string name="weather_current_location">Enter current location</string>
    <string name="weather_born_location">Enter city where you were born</string>
    <string name="weather_dream_location">Enter dream location</string>
    <string name="weather_family_location">Enter family\'s original country</string>
    <string name="button_send">Send</string>
</resources>