<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a3_secondphaseofapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_weatherFragment"
            app:destination="@id/weatherFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.a3_secondphaseofapp.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.a3_secondphaseofapp.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/weatherFragment"
        android:name="com.example.a3_secondphaseofapp.ui.weather.WeatherFragment"
        android:label="WeatherFragment"
        tools:layout="@layout/fragment_weather" >
        <argument
            android:name="bornLoc"
            app:argType="string"
            android:defaultValue="Cambridge" />
        <argument
            android:name="currLoc"
            app:argType="string"
            android:defaultValue="Lowell" />
        <argument
            android:name="dreamLoc"
            app:argType="string"
            android:defaultValue="Honolulu" />
        <argument
            android:name="famLoc"
            app:argType="string"
            android:defaultValue="Guatemala City" />
        <argument
            android:name="testLoc"
            app:argType="string" />
    </fragment>
</navigation>